src/simplex/snapshots/tsuno__simplex__dual__tests__dual_revised_simplex_solve_returns_iteration_limit_solution.snap
---
source: src/simplex/dual.rs
expression: trace
---
iteration 0
basis before: [1, 2]
outcome: pivoted
leaving basis position: 0 (value: -1)
entering column: 0 (reduced_cost: 1, pivot_row_value: -1, ratio: 1)
pivot row: [-1, 1, 0]
basis after: [0, 2]
